# quantitative_trading

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: auth.py  health.py  router.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: user.py
backend/app/schemas/: auth.py  health.py
backend/app/services/: auth.py
backend/migrations/: env.py
backend/quantitative_trading_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_auth.py  test_health.py
backend/worker/: main.py
docs/: TODO.md  deployment.md  requirements.md  technical_design.md
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/components/: app-shell.tsx
frontend/features/auth/: README.txt
frontend/lib/: config.ts
frontend/lib/api/: client.ts
frontend/styles/: globals.css
infra/caddy/: Caddyfile
scripts/: backup_postgres.sh  bootstrap_server.sh  check_runtime_health.sh  deploy_server.sh  install_backup_timer.sh  install_runtime_health_timer.sh  restore_postgres.sh  run_runtime_health_check.sh  verify_postgres_restore.sh
