[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantitative-trading-backend"
version = "0.1.0"
description = "Backend services for the quantitative trading MVP"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16,<2.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic-settings>=2.7,<3.0",
  "pytest>=8.3,<9.0",
  "redis>=6.0,<7.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.32,<1.0"
]

[tool.setuptools.packages.find]
include = ["app*", "worker*"]
namespaces = true
